--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,5 @@ markers =
     button_contact: Marcação para teste relacionados ao botão de contato em home
     buttons_pages: Marcação para teste relacionados aos botãos de redirecionamento no home
     customers: Marcação para teste relacionados ao banner de clientes    
+    cases: Marcação para teste relacionados ao banner de casaes de sucesso
+    feedback: Marcação para teste relacionados ao banner de depoimentos
