--- a/pytest.ini
+++ b/pytest.ini
@@ -6,3 +6,4 @@ markers =
     customers: Marcação para teste relacionados ao banner de clientes    
     cases: Marcação para teste relacionados ao banner de casaes de sucesso
     feedback: Marcação para teste relacionados ao banner de depoimentos
+    blog: Marcação para teste relacionados ao blog
