--- a/pytest.ini
+++ b/pytest.ini
@@ -7,3 +7,4 @@ markers =
     cases: Marcação para teste relacionados ao banner de casaes de sucesso
     feedback: Marcação para teste relacionados ao banner de depoimentos
     blog: Marcação para teste relacionados ao blog
+    footer: Marcação para teste relacionados ao footer da pagina home
